spacing fix

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -1796,11 +1796,7 @@ body.tribe_events_page_tribe-help {
 
 .tribe-events-admin-content-wrapper {
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	padding: 30px 0;
-
-	@media screen and (max-width: 480px) {
-		padding: 0 0 30px;
-	}
+	padding: 0 0 30px;
 }
 
 .tribe-events-admin-header {
